[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/player/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://src/bg/bg.png" type="Texture" id=3]
[ext_resource path="res://src/gun/gun.png" type="Texture" id=4]
[ext_resource path="res://src/sound_effects/player_jump.wav" type="AudioStream" id=5]
[ext_resource path="res://src/sound_effects/player_shoot.wav" type="AudioStream" id=6]
[ext_resource path="res://src/sound_effects/player_hit.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.1875
height = 4.62593

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ), Vector2( 1.1, 0.9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, -5.0 ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.32549, 0.317647, 0.317647, 1 )

[sub_resource type="Animation" id=6]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.8, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CubeMesh" id=7]
size = Vector3( 350, 200, 2 )

[sub_resource type="Animation" id=8]
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reload"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Faded:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "pause"
}, {
"args": [  ],
"method": "resume"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( -9.05991e-06, 2.5 )
scale = Vector2( 5.15625, 6.09375 )
z_index = -1
z_as_relative = false
texture = ExtResource( 3 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 3, 0 )
z_index = 2
z_as_relative = false
texture = ExtResource( 4 )
offset = Vector2( 4, -1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.514039 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -150.0
margin_top = -80.0
margin_right = -80.0
margin_bottom = -65.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitAnimation" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 6 )

[node name="PlayerJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="PlayerShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="PlayerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Faded" type="MeshInstance2D" parent="."]
modulate = Color( 0, 0, 0, 0 )
z_index = 999
mesh = SubResource( 7 )

[node name="DieAnimation" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/die = SubResource( 8 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -7.62939e-06, 0 )
scale = Vector2( 16, 9 )
